2004-04-04  John Luke  <jluke@cfl.rr.com>

	* vte/Vte.metadata: mark argv and envv parameters to
	Vte.Terminal.ForkCommand as arrays, it finally works
	* sample/Vte-test.cs: adjust for above

2004-04-02  Todd Berman  <tberman@sevenl.net>

	* gtk/Gtk.metadata: fix Gtk.SelectionData.Set.

2004-04-02  Todd Berman  <tberman@sevenl.net>

	* configure.in: added new .pc files
	* gtk-sharp.pc.in: modified to include Libs: line
	* art/.cvsignore: added art-sharp.pc
	* art/Makefile.am: added rules for installing .pc
	* art/art-sharp.pc.in: new .pc file
	* gconf/GConf/.cvsignore: added gconf-sharp.pc
	* gconf/GConf/Makefile.am: added rules for installing .pc
	* gconf/GConf/gconf-sharp.pc.in: new .pc file
	* gda/.cvsignore: added gda-sharp.pc
	* gda/Makefile.am: added rules for installing .pc
	* gda/gda-sharp.pc.in: new .pc file
	* glade/.cvsignore: added glade-sharp.pc
	* glade/Makefile.am: added rules for installing .pc
	* glade/glade-sharp.pc.in: new .pc file
	* gnome/.cvsignore: added gnome-sharp.pc
	* gnome/Makefile.am: added rules for installing .pc
	* gnome/gnome-sharp.pc.in: new .pc file
	* gnomedb/.cvsignore: added gnomedb-sharp.pc
	* gnomedb/Makefile.am: added rules for installing .pc
	* gnomedb/gnomedb-sharp.pc.in: new .pc file
	* gtkhtml/.cvsignore: added gtkhtml-sharp.pc
	* gtkhtml/Makefile.am: added rules for installing .pc
	* gtkhtml/gtkhtml-sharp.pc.in: new .pc file
	* rsvg/.cvsignore: added rsvg-sharp.pc
	* rsvg/Makefile.am: added rules for installing .pc
	* rsvg/rsvg-sharp.pc.in: new .pc file
	* vte/.cvsignore: added vte-sharp.pc
	* vte/Makefile.am: added rules for installing .pc
	* vte/vte-sharp.pc.in: new .pc file

2004-04-01  Mike Kestner  <mkestner@ximian.com>

	* art/Art.metadata : mark dst pass_as=out on Affine.Point

2004-04-01  Jorn Baayen  <jorn@nl.linux.org>

	* gtk/Style.custom : wrappers for Text[] and Base[]
	* gtk/glue/style.c : glue to access text[] and base[]
	[fixes #54805]

2004-04-01  Jeroen Zwartepoorte  <jeroen@xs4all.nl>
