@@ -1,3 +1,9 @@
+2004-04-04  Mike Kestner  <mkestner@ximian.com>
+
+	* gnome/glue/canvasitem.c : add glue to override VMs.
+	* gnome/CanvasItem.cs : expose virtual methods for update, point,
+	realize, draw, and render.
+
 2004-04-04  John Luke  <jluke@cfl.rr.com>
 
 	* vte/Vte.metadata: mark argv and envv parameters to
